deployment/sampleapp/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: caddy-ingress
spec:
    ingressClassName: nginx
    rules:
      - host: servicename.example.local
        http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy-service
                port:
                  name: http
